--- a/app/src/main/res/values-sk/strings.xml
+++ b/app/src/main/res/values-sk/strings.xml
@@ -20,21 +20,21 @@
     <string name="password_very_strong">Yeah baby, h4x0r style!</string>
 
     <string name="label_login_wallets">Peňaženky</string>
-    <string name="label_credits">Credits</string>
+    <string name="label_credits">Zásluhy</string>
     <string name="label_ok">OK</string>
     <string name="label_cancel">Zrušiť</string>
     <string name="label_close">Zavrieť</string>
-    <string name="label_wallet_advanced_details">Dotkni sa pre viac info</string>
+    <string name="label_wallet_advanced_details">Klepni pre viac info</string>
 
     <string name="label_send_success">úspešne odoslané</string>
     <string name="label_send_done">Hotovo</string>
 
-    <string name="label_receive_info_gen_qr_code">Dotkni sa pre QR kód</string>
+    <string name="label_receive_info_gen_qr_code">Klepni pre QR kód</string>
     <string name="info_send_prio_fees">Vyššia priorita = Vyšší poplatok</string>
 
-    <string name="info_xmrto_enabled">BTC platby povolené, tapni pre viac info.</string>
-
-    <string name="info_crazypass_enabled">CrAzYpass povolený, tapni pre viac info.</string>
+    <string name="info_xmrto_enabled">BTC platby aktivované, klepni pre viac info.</string>
+    <string name="info_crazypass_enabled">CrAzYpass aktivovaný, klepni pre viac info.</string>
+	<string name="info_ledger_enabled">Ledger aktivovaný, klepni pre viac info.</string>
 
     <string name="info_xmrto"><![CDATA[
         <b>Vložil si Bitcoin adresu.</b><br/>
@@ -69,12 +69,12 @@
     <string name="label_send_progress_xmrto_query">Pýtam sa na objednávku XMR.TO</string>
     <string name="label_send_progress_create_tx">Pripravujem Monero transakciu</string>
 
-    <string name="label_send_progress_queryparms">Querying xmr.to parameters</string>
+    <string name="label_send_progress_queryparms">Posielam XMR.TO parametre</string>
 
     <string name="label_generic_xmrto_error">CHYBA XMR.TO</string>
     <string name="text_generic_xmrto_error">Kód chyby: %1$d</string>
 
-    <string name="text_retry">Tapni pre opakovanie</string>
+    <string name="text_retry">Klepni pre opakovanie</string>
     <string name="text_noretry_monero">Uviazli sme tu!</string>
     <string name="text_noretry">Myslím, že XMR.TO nie je momentálne dostupná!</string>
 
@@ -83,7 +83,7 @@
 
     <string name="label_send_settings_advanced">Pokročilé:</string>
 
-    <string name="label_send_btc_xmrto_info">Navštív xmr.to pre podporu &amp; tracking</string>
+    <string name="label_send_btc_xmrto_info">Navštív XMR.TO pre podporu &amp; tracking</string>
     <string name="label_send_btc_xmrto_key_lb">Tajný kľúč\nXMR.TO</string>
     <string name="label_send_btc_xmrto_key">XMR.TO Tajný kľúč</string>
     <string name="label_send_btc_address">Cieľová BTC Adresa</string>
@@ -97,7 +97,7 @@
     <string name="backup_progress">Prebieha Záloha</string>
     <string name="archive_progress">Prebieha Archivácia</string>
     <string name="rename_progress">Prebieha Premenovanie</string>
-    <string name="open_progress">Skúšam spojenie s daemonom</string>
+    <string name="open_progress">Skúšam spojenie so serverom</string>
     <string name="changepw_progress">Prebieha zmena hesla</string>
 
     <string name="service_progress">Balím veci &#8230;\nMôže to chvíľu trvať!</string>
@@ -123,7 +123,7 @@
 
     <string name="status_transaction_failed">Transakcia zlyhala: %1$s</string>
 
-    <string name="send_xmrto_timeout">Čakal si príliš dlho kamarát!</string>
+    <string name="send_xmrto_timeout">Čakal si príliš dlho kámo!</string>
 
     <string name="service_busy">Som stále zaneprázdnený poslednou peňaženkou &#8230;</string>
 
@@ -166,7 +166,7 @@
     <string name="message_copy_xmrtokey">XMR.TO Kľúč skopírovaný do schránky!</string>
     <string name="message_copy_address">Adresa Peňaženky skopírovaná do schránky!</string>
     <string name="message_copy_txid">ID Transakcie skopírované do schránky!</string>
-    <string name="message_nocopy">Kopírovanie vypnuté z bezpečnostných príčin!</string>
+    <string name="message_nocopy">Kopírovanie vypnuté z bezpečnostných dôvodov!</string>
 
     <string name="message_exchange_failed">Neviem získať výmenný kurz!\nSkús XMR/XMR alebo vyskúšaj neskôr</string>
 
@@ -177,7 +177,7 @@
     <string name="generate_fingerprint_warn"><![CDATA[
         <strong>Overenie odtlačkom prsta</strong>
         <p>Pomocou overenia odtlačkom prsta, môžeš vidieť zostatok a prijímať prostriedky, bez zadávania hesla.</p>
-        <p>Avšak kôli zvýšeniu bezpečnosti, monerujo bude stále vyžadovať heslo na zobrazenie detailov peňaženky a posielanie.</p>
+        <p>Avšak kvôli zvýšeniu bezpečnosti, monerujo bude stále vyžadovať heslo na zobrazenie detailov peňaženky a posielanie.</p>
         <strong>Bezpečnostné Varovanie</strong>
         <p>Monerujo Ti chce pripomenúť, že ktokoľvek kto získa prístup k Tvojim odtlačkom, bude schopný nazrieť do tvojej peňaženky.</p>
         <p>Napríklad, záškodník niekde v blízkosti, môže otvoriť Tvoju peňaženku keď spíš.</p>
@@ -190,7 +190,7 @@
 
     <string name="generate_wallet_name">Daj mi meno!</string>
     <string name="generate_wallet_exists">Peňaženka existuje!</string>
-    <string name="generate_wallet_dot">Neslobodno začať .</string>
+    <string name="generate_wallet_dot">Neslobodno začať s .</string>
     <string name="generate_wallet_creating">Vytváranie peňaženky</string>
     <string name="generate_wallet_created">Peňaženka vytvorená</string>
     <string name="generate_wallet_create_failed">Vytvorenie peňaženky zlyhalo</string>
@@ -205,7 +205,7 @@
     <string name="generate_address_hint">Verejná Adresa</string>
     <string name="generate_viewkey_hint">Prezerací Kľúč</string>
     <string name="generate_spendkey_hint">Platobný Kľúč</string>
-    <string name="generate_mnemonic_hint">25-Slovný Mnemotechnický Seed</string>
+    <string name="generate_mnemonic_hint">25-slovný mnemotechnický Seed</string>
     <string name="generate_restoreheight_hint">Obnov Výšku alebo Dátum (YYYY-MM-DD)</string>
 
     <string name="generate_address_label">Verejná Adresa</string>
@@ -225,9 +225,8 @@
     <string name="send_amount_hint">0.00</string>
     <string name="send_notes_hint">Súkromné Poznámky (voliteľné)</string>
     <string name="send_generate_paymentid_hint">Generuj</string>
-    <string name="send_qr_hint">Skenovať</string>
-    <string name="send_send_label">Spend my sweet Moneroj</string>
-    <string name="send_send_timed_label">Spend my sweet Moneroj (%1$s)</string>
+    <string name="send_send_label">Odošli Monero</string>
+    <string name="send_send_timed_label">Odošli Monero (%1$s)</string>
     <string name="send_qr_invalid">Neplatný QR Kód</string>
     <string name="send_qr_address_invalid">Neplatný QR Kód Platby</string>
     <string name="send_address_invalid">Neplatná Adresa</string>
@@ -314,7 +313,37 @@
     <string name="accounts_new">Pridaný nový účet #%1$d</string>
     <string name="tx_account">Účet #</string>
 
-    <string name="send_sweepall">Pošli všetky potvrdené prostriedky v tomto účte!</string>
+    <string name="send_sweepall">Pošli všetky potvrdené prostriedky na tomto účte!</string>
     <string name="tx_subaddress">Podadresa #%1$d</string>
     <string name="generate_address_label_sub">Verejná Podadresa #%1$d</string>
+	
+	<string name="language">Slovenský</string>
+    <string name="menu_language">Language</string>
+    <string name="language_system_default">Use System Language</string>
+	
+	<string name="fab_restore_ledger">Obnoviť z Ledger Nano S</string>
+
+    <string name="progress_ledger_progress">Komunikácia s Ledger</string>
+    <string name="progress_ledger_confirm">Vyžaduje potvrdenie na Ledgeri!</string>
+    <string name="progress_ledger_lookahead">Načítavam podadresy</string>
+    <string name="progress_ledger_verify">Overovanie kľúčov</string>
+    <string name="progress_ledger_opentx">Robím ťažké výpočty</string>
+    <string name="progress_ledger_mlsag">Hešujem materiál</string>
+    <string name="open_wallet_ledger_missing">(znovu) zapoj Ledger</string>
+
+    <string name="accounts_progress_new">Vytváram účet</string>
+    <string name="accounts_progress_update">Aktualizujem peňaženku</string>
+
+    <string name="toast_ledger_attached">%1$s pripojený</string>
+    <string name="toast_ledger_detached">%1$s odpojený</string>
+
+    <string name="progress_nfc_write">Zapisujem Tag</string>
+    <string name="nfc_write_failed">Zapísanie Tagu zlyhalo!</string>
+    <string name="nfc_write_successful">Zapísanie Tagu úspešné</string>
+    <string name="nfc_tag_unsupported">Tag nepodporuje NDEF!</string>
+    <string name="nfc_tag_size">Tag poskytol %d bytes, ale treba %d!</string>
+    <string name="nfc_tag_read_undef">Neruzumiem Tagu!</string>
+    <string name="nfc_tag_read_what">Neviem čo tým básnik myslel!</string>
+    <string name="nfc_tag_read_success">Čítanie Tagu úspešné</string>
+    <string name="nfc_tag_tap">NFC je dostupné!</string>
 </resources>
