--- a/app/src/main/res/values-hu/strings.xml
+++ b/app/src/main/res/values-hu/strings.xml
@@ -347,4 +347,6 @@
     <string name="nfc_tag_read_what">Nem tudom, mit akarsz!</string>
     <string name="nfc_tag_read_success">Sikeres címkeolvasás</string>
     <string name="nfc_tag_tap">NFC elérhető!</string>
+
+    <string name="receive_desc_hint">Description (optional)</string>
 </resources>
