--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -349,4 +349,6 @@
 
     <string name="menu_language">Language</string>
     <string name="language_system_default">Use System Language</string>
+
+    <string name="receive_desc_hint">Description (optional)</string>
 </resources>
