--- a/app/src/main/res/values-nb/strings.xml
+++ b/app/src/main/res/values-nb/strings.xml
@@ -11,7 +11,7 @@
     <string name="menu_rename">Gi nytt navn &#8230;</string>
     <string name="menu_archive">Arkiver</string>
     <string name="menu_backup">Backup</string>
-	<string name="menu_changepw">[Forandre passord]</string>
+    <string name="menu_changepw">[Forandre passord]</string>
 
     <string name="password_weak">Fortsett å skrive &#8230;</string>
     <string name="password_fair">Meh &#8230;</string>
@@ -96,15 +96,15 @@
     <string name="archive_progress">Arkivering pågår</string>
     <string name="rename_progress">Nytt navn gis</string>
     <string name="open_progress">Sjekker daemon-tilkobling</string>
-	<string name="changepw_progress">[Passordforandring i gang]</string>
+    <string name="changepw_progress">[Passordforandring i gang]</string>
 
     <string name="service_progress">Gjør ting ferdig &#8230;\nDette kan ta si tid!</string>
 
     <string name="backup_failed">Backup feila!</string>
     <string name="archive_failed">Arkivering feila!</string>
     <string name="rename_failed">Kunne ikke gi nytt navn!</string>
-	<string name="changepw_failed">[Passordforandring feila!]</string>
-	<string name="changepw_success">[Passord forandra]</string>
+    <string name="changepw_failed">[Passordforandring feila!]</string>
+    <string name="changepw_success">[Passord forandra]</string>
 
     <string name="label_daemon">Node</string>
     <string name="prompt_daemon">([&lt;bruker&gt;:&lt;pass&gt;@]&lt;daemon&gt;[:&lt;port&gt;])</string>
@@ -127,8 +127,8 @@
 
     <string name="prompt_rename">Gi nytt navn til %1$s</string>
 
-	<string name="prompt_changepw">[Nytt passord for %1$s]</string>
-	<string name="prompt_changepwB">[Gjenta passord for %1$s]</string>
+    <string name="prompt_changepw">[Nytt passord for %1$s]</string>
+    <string name="prompt_changepwB">[Gjenta passord for %1$s]</string>
     <string name="prompt_password">Passord for %1$s</string>
     <string name="prompt_fingerprint_auth">[You can also open wallet using fingerprint.\nPlease touch sensor.]</string>
     <string name="prompt_send_password">Bekreft passord</string>
@@ -346,4 +346,6 @@
     <string name="nfc_tag_read_what">I don\'t know what you want!</string>
     <string name="nfc_tag_read_success">Reading Tag successful</string>
     <string name="nfc_tag_tap">NFC Available!</string>
+
+    <string name="receive_desc_hint">Description (optional)</string>
 </resources>
