--- a/app/src/main/res/values-pt/strings.xml
+++ b/app/src/main/res/values-pt/strings.xml
@@ -208,7 +208,7 @@
     <string name="generate_spendkey_hint">Chave de utilização</string>
     <string name="generate_mnemonic_hint">Chave Mnemónica de 25 Palavras</string>
     <string name="generate_restoreheight_hint">Restaurar de Altura ou Data (AAAA-MM-DD)</string>
-    
+
     <string name="generate_address_label">Endereço público</string>
     <string name="generate_viewkey_label">Chave de visualização</string>
     <string name="generate_spendkey_label">Chave de utilização</string>
@@ -349,4 +349,6 @@
     <string name="nfc_tag_read_what">I don\'t know what you want!</string>
     <string name="nfc_tag_read_success">Reading Tag successful</string>
     <string name="nfc_tag_tap">NFC Available!</string>
+
+    <string name="receive_desc_hint">Description (optional)</string>
 </resources>
