--- a/app/src/main/res/values-zh-rTW/strings.xml
+++ b/app/src/main/res/values-zh-rTW/strings.xml
@@ -345,4 +345,6 @@
     <string name="nfc_tag_read_what">無法執行此 NFC 標籤的操作！</string>
     <string name="nfc_tag_read_success">已成功讀取此 NFC 標籤</string>
     <string name="nfc_tag_tap">可使用 NFC 標籤</string>
+
+    <string name="receive_desc_hint">Description (optional)</string>
 </resources>
