--- a/app/src/main/res/values-ro/strings.xml
+++ b/app/src/main/res/values-ro/strings.xml
@@ -196,7 +196,6 @@
 
     <string name="send_amount_btc_xmr">%1$s (indicativ)</string>
 
-    <string name="send_address_hint">Adresa XMR sau BTC a destinatarului</string>
     <string name="send_paymentid_hint">Payment ID (facultativ)</string>
     <string name="send_amount_hint">0.00</string>
     <string name="send_notes_hint">Notițe private (facultativ)</string>
@@ -353,4 +352,5 @@
     <string name="send_address_openalias">OpenAlias secure &#x2714;</string>
     <string name="send_address_resolve_openalias">Resolving OpenAlias&#8230;</string>
     <string name="send_address_no_dnssec">OpenAlias without DNSSEC - address may be spoofed</string>
+    <string name="send_address_hint">Receiver\'s XMR/BTC Address or OpenAlias</string>
 </resources>
