--- a/app/src/main/res/values-el/strings.xml
+++ b/app/src/main/res/values-el/strings.xml
@@ -196,7 +196,6 @@
 
     <string name="send_amount_btc_xmr">%1$s (ενδεικτικό)</string>
 
-    <string name="send_address_hint">Διεύθυνση XMR ή BTC παραλήπτη</string>
     <string name="send_paymentid_hint">ID Πληρωμής(Payment ID)(προαιρετικό)</string>
     <string name="send_amount_hint">0.00</string>
     <string name="send_notes_hint">Προσωπικές σημειώσεις (προαιρετικό)</string>
@@ -353,4 +352,5 @@
     <string name="send_address_openalias">OpenAlias secure &#x2714;</string>
     <string name="send_address_resolve_openalias">Resolving OpenAlias&#8230;</string>
     <string name="send_address_no_dnssec">OpenAlias without DNSSEC - address may be spoofed</string>
+    <string name="send_address_hint">Receiver\'s XMR/BTC Address or OpenAlias</string>
 </resources>
