--- a/app/src/main/res/values-hu/strings.xml
+++ b/app/src/main/res/values-hu/strings.xml
@@ -222,7 +222,6 @@
 
     <string name="send_amount_btc_xmr">%1$s (előrejelzés)</string>
 
-    <string name="send_address_hint">Kedvezményezett XMR vagy BTC címe</string>
     <string name="send_paymentid_hint">Fizetési azonosító (opcionális)</string>
     <string name="send_amount_hint">0.00</string>
     <string name="send_notes_hint">Privát közlemény (opcionális)</string>
@@ -354,4 +353,5 @@
     <string name="send_address_openalias">OpenAlias secure &#x2714;</string>
     <string name="send_address_resolve_openalias">Resolving OpenAlias&#8230;</string>
     <string name="send_address_no_dnssec">OpenAlias without DNSSEC - address may be spoofed</string>
+    <string name="send_address_hint">Receiver\'s XMR/BTC Address or OpenAlias</string>
 </resources>
