--- a/app/src/main/res/values-sv/strings.xml
+++ b/app/src/main/res/values-sv/strings.xml
@@ -202,7 +202,6 @@
 
     <string name="send_amount_btc_xmr">%1$s (ungefärlig)</string>
 
-    <string name="send_address_hint">Mottagarens XMR- eller BTC-adress</string>
     <string name="send_paymentid_hint">Betalnings-ID (valfritt)</string>
     <string name="send_amount_hint">0,00</string>
     <string name="send_notes_hint">Privat anteckning (valfri)</string>
@@ -337,4 +336,5 @@
     <string name="send_address_openalias">OpenAlias secure &#x2714;</string>
     <string name="send_address_resolve_openalias">Resolving OpenAlias&#8230;</string>
     <string name="send_address_no_dnssec">OpenAlias without DNSSEC - address may be spoofed</string>
+    <string name="send_address_hint">Receiver\'s XMR/BTC Address or OpenAlias</string>
 </resources>
