--- a/app/src/main/res/values-zh-rTW/strings.xml
+++ b/app/src/main/res/values-zh-rTW/strings.xml
@@ -220,7 +220,6 @@
 
     <string name="send_amount_btc_xmr">%1$s (參考價)</string>
 
-    <string name="send_address_hint">收款者的 XMR 或 BTC 地址</string>
     <string name="send_paymentid_hint">付款 ID (選填)</string>
     <string name="send_amount_hint">0.00</string>
     <string name="send_notes_hint">註記 (選填)</string>
@@ -352,4 +351,5 @@
     <string name="send_address_openalias">OpenAlias secure &#x2714;</string>
     <string name="send_address_resolve_openalias">Resolving OpenAlias&#8230;</string>
     <string name="send_address_no_dnssec">OpenAlias without DNSSEC - address may be spoofed</string>
+    <string name="send_address_hint">Receiver\'s XMR/BTC Address or OpenAlias</string>
 </resources>
