--- a/app/src/main/res/values-sk/strings.xml
+++ b/app/src/main/res/values-sk/strings.xml
@@ -220,7 +220,6 @@
 
     <string name="send_amount_btc_xmr">%1$s (indikatív)</string>
 
-    <string name="send_address_hint">XMR alebo BTC Adresa Príjemcu</string>
     <string name="send_paymentid_hint">ID Platby (voliteľné)</string>
     <string name="send_amount_hint">0.00</string>
     <string name="send_notes_hint">Súkromné Poznámky (voliteľné)</string>
@@ -347,4 +346,10 @@
     <string name="nfc_tag_tap">NFC je dostupné!</string>
 
     <string name="receive_desc_hint">Description (optional)</string>
+
+    <string name="send_address_not_openalias">OpenAlias not resolved - address not available</string>
+    <string name="send_address_openalias">OpenAlias secure &#x2714;</string>
+    <string name="send_address_resolve_openalias">Resolving OpenAlias&#8230;</string>
+    <string name="send_address_no_dnssec">OpenAlias without DNSSEC - address may be spoofed</string>
+    <string name="send_address_hint">Receiver\'s XMR/BTC Address or OpenAlias</string>
 </resources>
