--- a/app/src/main/res/values-zh-rCN/strings.xml
+++ b/app/src/main/res/values-zh-rCN/strings.xml
@@ -219,7 +219,6 @@
 
     <string name="send_amount_btc_xmr">%1$s (参考价)</string>
 
-    <string name="send_address_hint">收款者的 XMR 或 BTC 地址</string>
     <string name="send_paymentid_hint">付款ID (选填)</string>
     <string name="send_amount_hint">0.00</string>
     <string name="send_notes_hint">注记 (选填)</string>
@@ -346,4 +345,10 @@
     <string name="nfc_tag_tap">NFC Available!</string>
 
     <string name="receive_desc_hint">Description (optional)</string>
+
+    <string name="send_address_not_openalias">OpenAlias not resolved - address not available</string>
+    <string name="send_address_openalias">OpenAlias secure &#x2714;</string>
+    <string name="send_address_resolve_openalias">Resolving OpenAlias&#8230;</string>
+    <string name="send_address_no_dnssec">OpenAlias without DNSSEC - address may be spoofed</string>
+    <string name="send_address_hint">Receiver\'s XMR/BTC Address or OpenAlias</string>
 </resources>
