--- a/app/src/main/res/values-pt/strings.xml
+++ b/app/src/main/res/values-pt/strings.xml
@@ -351,7 +351,7 @@
 
     <string name="receive_desc_hint">Description (optional)</string>
 
-    <string name="send_address_not_openalias">OpenAlias not resolved - address not available</string>
+    <string name="send_address_not_openalias">OpenAlias address not available</string>
     <string name="send_address_openalias">OpenAlias secure &#x2714;</string>
     <string name="send_address_resolve_openalias">Resolving OpenAlias&#8230;</string>
     <string name="send_address_no_dnssec">OpenAlias without DNSSEC - address may be spoofed</string>
