--- a/app/src/main/res/values-sk/strings.xml
+++ b/app/src/main/res/values-sk/strings.xml
@@ -352,4 +352,6 @@
     <string name="send_address_resolve_openalias">Prekladám OpenAlias&#8230;</string>
     <string name="send_address_no_dnssec">OpenAlias bez DNSSEC - adresa môže byť zneužitá</string>
     <string name="send_address_hint">Prijímateľova XMR/BTC Adresa alebo OpenAlias</string>
+
+    <string name="status_wallet_connect_wrongversion">Node version incompatible!</string>
 </resources>
